add .tfvars to git since they don't contain credentials at the moment

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 *.tfstate.backup
 
 # Terraform variable files with sensitive data
-terraform.tfvars
+# terraform.tfvars
 *.auto.tfvars
 
 # Terraform plans
